--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -18,8 +18,9 @@
   <%= link_to t("devise.views.shared.links.unlock_instructions"), new_unlock_path(resource_name), class: "block text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
 <% end %>
 
-<% if devise_mapping.omniauthable? %>
+<% if devise_mapping.omniauthable? && resource_class.omniauth_providers.any? %>
   <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700">
+    <p class="text-sm text-gray-600 dark:text-gray-400 mb-3"><%= t("devise.views.shared.links.oauth_separator") %></p>
     <% resource_class.omniauth_providers.each do |provider| %>
       <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), 
           data: { turbo: false }, 
