--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,30 +1,28 @@
-<%- if controller_name != 'sessions' %>
+<% if controller_name != 'sessions' %>
   <%= link_to t("devise.views.shared.links.sign_in"), new_session_path(resource_name), class: "block text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
 <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<% if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to t("devise.views.shared.links.sign_up"), new_registration_path(resource_name), class: "block text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
 <% end %>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+<% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to t("devise.views.shared.links.forgot_password"), new_password_path(resource_name), class: "block text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
 <% end %>
 
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+<% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to t("devise.views.shared.links.confirmation_instructions"), new_confirmation_path(resource_name), class: "block text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
 <% end %>
 
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+<% if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to t("devise.views.shared.links.unlock_instructions"), new_unlock_path(resource_name), class: "block text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
 <% end %>
 
-<%- if devise_mapping.omniauthable? %>
-  <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700">
-    <p class="text-sm text-gray-600 dark:text-gray-400 mb-3"><%= t("devise.views.shared.links.oauth_separator") %></p>
-    <%- resource_class.omniauth_providers.each do |provider| %>
-      <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), 
-          data: { turbo: false }, 
-          class: "du-btn du-btn-outline du-btn-block mb-2" %>
-    <% end %>
-  </div>
+<% if devise_mapping.omniauthable? && resource_class.omniauth_providers.any? %>
+  <div class="du-divider"><%= t("devise.views.shared.links.oauth_separator") %></div>
+  <% resource_class.omniauth_providers.each do |provider| %>
+    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider),
+        data: { turbo: false },
+        class: "du-btn du-btn-outline du-btn-block mb-2" %>
+  <% end %>
 <% end %>
