--- a/lib/templates/rails/credentials/credentials.yml.tt
+++ b/lib/templates/rails/credentials/credentials.yml.tt
@@ -1,6 +1,14 @@
 # Used as the base secret for all MessageVerifiers in Rails, including the one protecting cookies.
 secret_key_base: <%= secret_key_base %>
 
+# oauth
+google_oauth2:
+  key: ''
+  secret: ''
+github:
+  key: ''
+  secret: ''
+
 stripe:
   private_key: sk_
   public_key: pk_
