--- a/app/views/static/refunds.html.erb
+++ b/app/views/static/refunds.html.erb
@@ -3,7 +3,7 @@
 <%= modal do %>
   <%= render PageComponent.new do |component| %>
     <div class="prose">
-      <%= markdown_to_html(File.read(Rails.root.join('app/views/static/terms.md'))) %>
+      <%= markdown_to_html(File.read(Rails.root.join('app/views/static/refunds.md'))) %>
     </div>
   <% end %>
 <% end %>
