--- a/app/views/users/connected_accounts/_connected_account.html.erb
+++ b/app/views/users/connected_accounts/_connected_account.html.erb
@@ -11,13 +11,21 @@
       <% if connected_account.name.present? %>
         <div class="font-medium">
           <%= connected_account.name %>
+          <% if connected_account.nickname.present? %>
+            <span class="text-sm text-base-content/60">
+              @<%= connected_account.nickname %>
+            </span>
+          <% end %>
         </div>
       <% end %>
       <div class="font-medium flex items-center gap-2">
         <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
         <%= ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:name] %>
       </div>
-      <div class="text-sm text-base-content">
+      <div class="text-sm text-base-content/70 font-mono">
+        <%= connected_account.uid %>
+      </div>
+      <div class="text-sm">
         <%= t(".connected_time_ago", time: time_ago_in_words(connected_account.created_at)) %>
       </div>
     </div>
