--- a/lib/templates/rails/credentials/credentials.yml.tt
+++ b/lib/templates/rails/credentials/credentials.yml.tt
@@ -3,15 +3,18 @@ secret_key_base: <%= secret_key_base %>
 
 # oauth
 google_oauth2:
-  key: ''
-  secret: ''
+  client_id: ''
+  client_secret: ''
 github:
   key: ''
   secret: ''
+telegram:
+  bot_nickname: ''
+  bot_secret: ''
 
 stripe:
-  private_key: sk_
-  public_key: pk_
+  secret_key: sk_
+  publishable_key: pk_
   webhook_receive_test_events: true
   signing_secret:
   - whsec_
