--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,11 @@
   </head>
 
   <body class="flex h-dvh overflow-hidden" data-controller="mobile-sidebar layout-switcher">
-    <% if signed_in? %>
-      <% sidebar_layout = cookies[:sidebar_layout] || "default" %>
-      <% if sidebar_layout == "default" %>
-        <%= render "shared/sidebar" %>
-      <% else %>
-        <%= render "shared/sidebar_2_cols" %>
-      <% end %>
+    <% sidebar_layout = cookies[:sidebar_layout] || "default" %>
+    <% if sidebar_layout == "default" %>
+      <%= render "shared/sidebar" %>
+    <% else %>
+      <%= render "shared/sidebar_2_cols" %>
     <% end %>
 
     <div class="flex-grow flex flex-col bg-base-300">
@@ -21,15 +19,10 @@
           <%= render "shared/flash" %>
         </div>
       </header>
-      <% authenticated_classes = "lg:m-2 lg:mt-0 lg:ml-0 lg:rounded-lg lg:border border-base-content/20" %>
-      <main class="<%= authenticated_classes if signed_in? %> flex-grow p-4 bg-base-100 overflow-y-auto">
+      <main class="flex-grow p-4 bg-base-100 overflow-y-auto lg:m-2 lg:mt-0 lg:ml-0 lg:rounded-lg lg:border border-base-content/20">
         <%= yield %>
       </main>
-      <% if signed_in? %>
-        <%= render "shared/footer_nav" %>
-      <% else %>
-        <%= render "shared/footer" %>
-      <% end %>
+      <%= render "shared/footer_nav" %>
     </div>
     <%= turbo_frame_tag :modal %>
   </body>
