--- a/app/views/layouts/marketing.html.erb
+++ b/app/views/layouts/marketing.html.erb
@@ -4,7 +4,7 @@
     <%= render "layouts/head" %>
   </head>
   <body class="flex flex-col min-h-screen">
-    <div class="flex-grow flex flex-col bg-base-300 overflow-x-hidden">
+    <div class="flex-grow flex flex-col bg-base-300">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
         <div id="flash" class="absolute left-1/2 -translate-x-1/2 z-40 flex flex-col items-center">
