--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,9 +17,11 @@
       </button>
 
     <% else %>
-      <%= link_to root_path, class: "no-underline" do %>
-        <%= image_tag "logo.png", class: "size-8" %>
-      <% end %>
+      <div>
+        <%= link_to root_path, class: "no-underline" do %>
+          <%= image_tag "logo.png", class: "size-8" %>
+        <% end %>
+      </div>
       <%= active_link_to "Pricing", pricing_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
     <% end %>
   </div>
@@ -63,7 +65,7 @@
           <%= nav_link t("users.referrals.index.title"), user_referrals_path, icon: "👥" %>
           <%= nav_link t("users.connected_accounts.index.title"), user_connected_accounts_path, icon: "🔗" if Devise.omniauth_configs.keys.any? %>
           <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
-          <%= nav_link t("shared.navigation.logout"), destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") } %>
+          <%= nav_link t("shared.navigation.logout"), destroy_user_session_path, icon: "👋", data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") } %>
         </div>
       </details>
     <% else %>
