--- a/app/views/static/refunds.html.erb
+++ b/app/views/static/refunds.html.erb
@@ -2,6 +2,6 @@
 
 <%= modal do %>
   <%= render PageComponent.new do |component| %>
-    <%= markdown_to_html(File.read(Rails.root.join('app/views/static/refunds.md'))) %>
+    <%= markdown_to_html(File.read(Rails.root.join("app/views/static/refunds.md"))) %>
   <% end %>
 <% end %>
