--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -12,7 +12,7 @@
 
         <ul class="du-menu">
           <li>
-            <%= active_link_to organizations_path, class_active: "du-menu-active", active: :exclusive, title: t("organizations.index.title"), active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [] ] do %>
+            <%= active_link_to organizations_path, class: "aspect-square leading-none p-2", class_active: "du-menu-active", active: :exclusive, title: t("organizations.index.title"), active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [] ] do %>
               <%= inline_svg_tag "svg/globe-europe-africa.svg" %>
             <% end %>
           </li>
@@ -20,7 +20,7 @@
 
         <div class="flex flex-col items-center space-y-1">
           <% Current.organizations.each do |organization| %>
-            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), title: organization.name, class_active: "bg-primary", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-primary hover:bg-primary" do %>
+            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), class: "aspect-square leading-none p-1", class_active: "du-menu-active bg-primary rounded", title: organization.name do %>
               <%= organization_avatar(organization) %>
             <% end %>
           <% end %>
